--- a/packages/appstore/src/modules/onboarding/onboarding.scss
+++ b/packages/appstore/src/modules/onboarding/onboarding.scss
@@ -1,5 +1,6 @@
 .onboarding-wrapper {
-    height: 80%;
+    display: flex;
+    flex-direction: column;
     background-color: var(--text-less-prominent);
 }
 
@@ -18,31 +19,26 @@
     display: flex;
     justify-content: center;
     color: var(--general-main-1);
-    top: 20%;
 }
 
 .onboarding-footer {
     background-color: var(--general-main-1);
-    position: absolute;
-    top: 80%;
     width: 100%;
 
     &__progress-bar {
         margin-top: 2rem;
     }
 
-    @include mobile {
-        top: 75%;
-    }
-
     &-header {
         line-height: 3rem;
-        margin-top: 4.8rem;
     }
 
     &-text {
         line-height: 2rem;
         margin-top: 0.8rem;
+        @include mobile {
+            margin-top: 0;
+        }
     }
 
     &-buttons {
